# Configs

./: .bashrc  README.md  change_conf.sh  change_conf_util.sh  config_switcher.sh  dense.py  evolution_mu_5_lambda_5.csv  hyprland.conf  hyprpaper.conf  keymap  keymap.xkb  lazyvim.conf  meta_information_mu_5_lambda_5.csv  mini_rgb_script.py  mini_rgb_script.py~  obs cams  pixelated.py  replace_conf_line.sh  sec_test.xkb  tags  update_week_data.py  vim
changing/: change_conf.sh
fans/: fancontrol
hypr_handler/: setup.py
hypr_handler/hypr_handler/: __main__.py
hyprland/: auto_completion.sh  change_bg.sh  colors.conf  hyprland.conf  hyprland_laptop.conf  hyprland_master.conf  hyprpaper.conf  hyprpaper_laptop.conf  keymap_dwindel.conf  min_version.conf  pyprland.toml  set_colors.sh  set_keyboard_layout.sh
hyprland/keymap/: defaults.conf  dwindel.conf  hy3.conf  keymap_dwindel.conf  keymap_hy3.conf  keymap_scroller.conf  master.conf  scroller.conf  split_workspace.conf  vdesktop.conf
hyprland/modules/: auto_start.conf  colors.conf  nvidea_workaurounds.conf  plugin.conf  plugins.conf  special_configs.conf  special_workspace.conf  system_variables.conf  window_rules.conf  workspaces.conf  write_german.sh
hyprland/pyprland_own/: pyproject.toml  python_connection.py
hyprland/skripts/: change_bg.sh  check_laptop.sh  drucken.sh  hypr_scroller.py  mpvpaper.sh  screenshot_to_drive.sh  (+3 more)
kitty/: .bashrc  kitty.conf
tofi/: config  history
utils/: git_commit.sh
vimiv/: move_to_used.sh
wofi/: change_wofi_cli.sh  style.css  wofi.conf
zoxide/: db.zo  z_config.sh
