[tool.poetry]
name = "pyprland_own"
version = "0.0.1"
description = "Hyperland addon counting focus changes"
authors = [""]
license = "MIT"
readme = "README.md"
#homepage = "url of your project"

[tool.poetry.dependencies]
python = "^3.11"
pyprland = "^1.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
